# logmind

./: .gitignore  LICENSE  README.md  README_KO.md  pyproject.toml
src/logmind/: __init__.py  alerter.py  cli.py  collector.py  detector.py  display.py  embedder.py  incidents.py  models.py  parser.py  storage.py
tests/: test_alerter.py  test_alerter_advanced.py  test_cli.py  test_cli_e2e.py  test_collector.py  test_collector_advanced.py  test_collector_stress.py  test_detector.py  test_detector_boundary.py  test_detector_stress.py  test_display.py  test_display_rigor.py  test_display_stress.py  test_e2e_pipeline.py  test_embedder.py  test_incidents_stress.py  test_integration_comprehensive.py  test_models.py  test_models_rigor.py  test_parser.py  test_parser_advanced.py  test_parser_stress.py  test_real_model.py  test_robustness.py  test_storage.py  test_storage_rigor.py
