[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "logmind"
version = "0.1.0"
description = "AI-powered log anomaly detection using semantic embeddings"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [{ name = "wjddusrb03" }]
keywords = ["log", "anomaly", "detection", "embeddings", "devops", "monitoring"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: System :: Monitoring",
    "Topic :: System :: Logging",
]
dependencies = [
    "langchain-turboquant",
    "sentence-transformers",
    "click",
    "numpy",
    "rich",
]

[project.optional-dependencies]
alerts = ["httpx>=0.27.0"]
docker = ["docker>=7.0.0"]
dashboard = ["textual>=0.50.0"]
all = ["httpx>=0.27.0", "docker>=7.0.0", "textual>=0.50.0"]
dev = ["pytest>=8.0.0"]

[project.scripts]
logmind = "logmind.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/logmind"]
